# wmm2020

./: .coveragerc  LICENSE  LICENSE.txt  MANIFEST.in  README.md  RunWMM2020.py  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml
src/wmm2020/: CMakeLists.txt  __init__.py  base.py  build.py  meson.build  setup.cmake  test_input.asc  this_path.py  with_extension.py
src/wmm2020/src/: GeomagnetismLibrary.c  wmm_cext.c  wmm_ext.c  wmm_point.c  wmm_point_sub.c  wmm_point_sub.h
src/wmm2020/tests/: test_all.py
wmm2020/: CMakeLists.txt  __init__.py  plots.py
wmm2020/src/: GeomagnetismHeader.h  wmm_point_sub.c
wmm2020/tests/: test_all.py
