[metadata]
name = wmm2020_cext
version = 1.1.2
author = Michael Hirsch, Ph.D.
url = https://github.com/justengel/wmm2020
description = WMM2020 geomagnetic model with simple object-oriented Python interface
keywords =
  geomagnetic
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  xarray
  numpy
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
